--- a/doc/evidence_policy.tex
+++ b/doc/evidence_policy.tex
@@ -138,7 +138,7 @@
 
 \begin{document}
 \singlespace
-\title{\textbf{Evidence in policymaking}\vspace{-1ex}\thanks{}}
+\title{\textbf{Policy-makers and evidence: double standards? A field experiment (Pre-Analysis Plan)}\vspace{-1ex}\thanks{}}
 % Thanks
 \author{Angele Delevoye\thanks{angele.delevoye@yale.edu}\vspace{-1ex}}
 \author{Trevor Incerti\thanks{trevor.incerti@yale.edu}\vspace{-1ex}}
@@ -159,6 +159,19 @@
 \end{center}
 
 \section{Introduction} \label{sec:Introduction}
+
+\section{Theory} \label{sec:Theory}
+Evidence in policy making and field experiments reaching out to legislators
+
+\section{Design} \label{sec:Design}
+
+
+\section{Power Analysis} \label{sec:Power}
+
+\section{Ethical considerations} \label{sec:Ethics}
+
+\section{Conclusion} \label{sec:Conclusion}
+
 
 \clearpage
 \pagebreak
