--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -99,3 +99,53 @@
 	Publisher = {Longman Publishing Group London, England},
 	Title = {Home Style: House Members in Their Districts (Longman Classics Series)},
 	Year = {2002}}
+
+
+
+@article{doberstein2017whom,
+  title={Whom do bureaucrats believe? A randomized controlled experiment testing perceptions of credibility of policy research},
+  author={Doberstein, Carey},
+  journal={Policy Studies Journal},
+  volume={45},
+  number={2},
+  pages={384--405},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@article{zelizer2018responsive,
+  title={How Responsive Are Legislators to Policy Information? Evidence from a Field Experiment in a State Legislature},
+  author={Zelizer, Adam},
+  journal={Legislative Studies Quarterly},
+  volume={43},
+  number={4},
+  pages={595--618},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+
+@article{butler2012field,
+  title={A field experiment on legislators? home styles: service versus policy},
+  author={Butler, Daniel M and Karpowitz, Christopher F and Pope, Jeremy C},
+  journal={The Journal of Politics},
+  volume={74},
+  number={2},
+  pages={474--486},
+  year={2012},
+  publisher={Cambridge University Press New York, USA}
+}
+
+@article{butler2011can,
+  title={Can learning constituency opinion affect how legislators vote? Results from a field experiment},
+  author={Butler, Daniel M and Nickerson, David W and others},
+  journal={Quarterly Journal of Political Science},
+  volume={6},
+  number={1},
+  pages={55--83},
+  year={2011},
+  publisher={Now Publishers, Inc.}
+}
+
+
+
