Edits to main doc

--- a/doc/evidence_policy.tex
+++ b/doc/evidence_policy.tex
@@ -138,7 +138,8 @@
 
 \begin{document}
 \singlespace
-\title{\textbf{Policy-makers and evidence: double standards? A field experiment (Pre-Analysis Plan)}\vspace{-1ex}\thanks{}}
+\title{\textbf{Policy-makers and evidence: double standards? A field experiment \\
+(Pre-Analysis Plan)}\vspace{-1ex}\thanks{}}
 % Thanks
 \author{Angele Delevoye\thanks{angele.delevoye@yale.edu}\vspace{-1ex}}
 \author{Trevor Incerti\thanks{trevor.incerti@yale.edu}\vspace{-1ex}}
@@ -160,31 +161,46 @@ A recent, bipartisan concern in Congress is the need for more evidence-based pol
 
 \section{Introduction} \label{sec:Introduction}
 
-The need for more evidence-based policy-making is the object of a rare bipartisan agreement. Congress passed the Foundations for Evidence-Based Policymaking Act in 2018, a legislation sponsored by then-House Speaker Paul Ryan (R-WI) and Senator Patty Murray (D-WA). Only 17 representatives voted against, and it passed the Senate by Unanimous consent. Policy-makers' intentions are clear, but do their behaviors and knowledge align with those intentions? Are policy-makers really more receptive to higher causal evidence standards when receiving policy-information? And even if they want to be, do they have sufficient knowledge of evidence standards to be able to differentiate between different levels of information? In order to investigate these questions, we develop an idea for a field experiment. We would reach out to policy-makers with new information on a policy, and would randomize the source of this new information (more concretely, the kind of study from which the information came from and its level of scientific evidence: from a simple regression to a well-conducted RCT). We would also randomize whether we provide information to the policy-maker as to what the scientific evidence means (telling them for example that a RCT is considered the golden standard in causal inference and evaluation studies). 
-\bigbreak
-This pre-analysis presents the theories and existing literatures we would rely on and hope to contribute to. We are especially hoping to build on the few similar experimental studies that have reached out to policy-makers in American Politics. Then we get into the details of our proposed experimental design: treatment (choice of policy and evidence standard), logistics (partnership with a 3rd party organization), outcome measures and ethical considerations. These details on the design are still preliminary, and several open questions remain. We finish this pre-analysis plan with a power analysis for the experiment, based on the details that are set at this stage. 
+The need for more evidence-based policy-making is the object of a rare bipartisan agreement. Congress passed the Foundations for Evidence-Based Policymaking Act in 2018 - legislation sponsored by then-House Speaker Paul Ryan (R-WI) and Senator Patty Murray (D-WA). Only 17 representatives voted against, and it passed the Senate by Unanimous consent. Policy-makers' intentions are clear, but do their behaviors and knowledge align with those intentions? Are policy-makers really more receptive to higher standards of evidence when evaluating policy-information? Moreover, even if policymakers want to adopt policies based on high-quality evidence, do they have sufficient knowledge of evidence standards to be able to differentiate between research of varying quality? 
+
+We therefore propose to use a field experiment to test: (1) whether policymakers give more credence to high quality research, and (2) if policymakers can recognize differences in research quality. Our research design would entail contacting policy-makers with information regarding research on a potential educational policy while randomizing the kind of research design from which study derives its evidence - from a simple regression to a well-conducted RCT. We would also randomize whether we provide the policy-maker with information about varying standards of evidence within academic research (e.g. informing them that an RCT is considered the gold standard in causal inference and policy evaluation studies). 
+
+Our pre-analysis first presents the theory and existing literature we hope to advance. In particular, we hope to build on existing experimental studies that have contacted American policy-makers. Next, we present the details of our proposed experimental design: treatment (choice of policy and evidence standard), logistics (partnership with a 3rd party organization), outcome measures, and ethical considerations. These details on the design are still preliminary, and several open questions remain. We conclude with a power analysis for the proposed experiment.
 
 
 \section{Theory} \label{sec:Theory}
+\subsection{Evidence in policymaking}  \label{sec: evidence}
 
+A growing literature examines if, when, and how evidence and expertise is used in policy-making. The conventional wisdom from the this literature in the US Congressional context has long been that evidence and information do not matter. Legislators are focused on reelection \citep{mayhew1974congress}, power within Congress \citep{fenno1973congressmen}, and responding to pressures from local constituents \citep{fenno2002home}. \citet{schick1976supply} concluded in 1976 that ``Congress is not a natural habit for policy analysis," and \citet{lindblom2018science} states that the best Congress can do is "muddle through" given institutional constraints and lack of time and resources. 
 
-The first literature of interest is the growing literature on the use of evidence and expertise in policy-making: whether, how and when is expertise used by policy-makers. The general wisdom emanating from the literature on Congress has long been that evidence and information do not matter. Legislators are focused on reelection \citep{mayhew1974congress}, power within Congress \citep{fenno1973congressmen}, and answering to local pressures and issues \citep{fenno2002home}.\citet{schick1976supply} concluded in 1976 that "Congress is not a natural habit for policy analysis". Given those institutional constraints and lack of time and resources, the best Congress can do is "muddle through" \citep{lindblom2018science}. But more recently, scholars have called for a more nuanced understanding of the use of evidence in policy-making \citet{patashnik2016can}, despite well-identified methodological challenges \citep{mandell1984approaches}. Multiple case studies have shown that evidence is used in policy-making, but we need a better understanding of how (much), when and why. Scholars have also looked at the supply side of scientific evidence, and have looked at what scientists can do to maximize the use of scientific evidence. \citet{cairney2016politics} lays out the two types of shortcuts used by legislators, a rational one and a more irrational form of decision-making drawing on emotions, beliefs and habits. He argues that scientists have mostly focused on the former, and that they should do a better job at accompanying evidence with simple stories to exploit the emotional or ideological biases of policymakers. We are hoping to test and measure legislators' ability to respond to the first, rational type of stimulus. 
-\bigbreak
+Recently, however, scholars have called for a more nuanced understanding of the use of evidence in policy-making. [\citet{patashnik2016can}, despite well-identified methodological challenges \citep{mandell1984approaches}.] Case studies have suggested that evidence is used in policy-making, but we need a better understanding of how (much), when and why. Scholars have also examined the supply of scientific evidence, and have looked how scientists can maximize the use of scientific evidence. \citet{cairney2016politics} lays out two types of shortcuts used by legislators, rational decision-making and irrational decision-making drawing on emotions, beliefs and habits. He argues that scientists have mostly focused on the former, and that they should do a better job at accompanying evidence with simple stories to exploit the emotional or ideological biases of policymakers. We hope to test and measure legislators' ability to respond to the first, rational type of stimulus. 
+
 Depending on what and who the source of the information ends up being in the experiment, we could also look at literatures on messenger effects (does the source of information matter?), relations between diverse groups and policy-makers, etc. The initial goal is to conduct this experiment with the U.S. Congress, but we might end up conducting it at the State or more local levels (cf. below). In that case, literatures on state and local politics would come into play. Finally, this project might address broader, more theoretical questions on the functioning of our current democracies, and the potential gaps between reality and the ideals of deliberative democracies. We are also hoping that this project will contribute to ongoing philosophy of science discussions. What is the value of our different methods outside of the research community bubble, how are they perceived and understood by different targets (policy-makers for this specific experiment, but a similar experiment could later be conducted with citizens)? 
-\bigbreak
-In American Politics, researchers reaching out to legislators under a randomized experimental design has been rare. Table 1 below summarizes the experiments we are hoping to draw inspiration from. Our design will probably end up being a mix of \citet{kalla2016campaign}  and  \citet{butler2011politicians}'s experiments. Our factorial design will come close to \citet{butler2011politicians}'s 2x3 design (and we might need to use their contact list for state legislatures). We are also hoping to emulate \citet{kalla2016campaign}'s use of a 3rd party organization to reach out to the legislators, as well as their more nuanced outcome measure: both rate of response to emails and the seniority of the person who agreed to meet with the organization. We believe that roll call votes as the outcome measure, used by \citet{bergan2009does}, is only possible for an experiment extremely targeted on one bill and one Chamber. 
-\bigbreak
-To our knowledge, no similar experiment has tried to reach out to bureaucrats. There are very good, obvious reasons for this: constituents and groups reaching out is business as usual for a legislative office, and part of a legislator's job (and incentives) is to listen to constituents and groups. Reaching out to bureaucrats would be much less natural, we would need a legitimate reason and credible source (bureaucrats would probably not answer to advocacy groups or think tanks - they might to more research-oriented and institutional sources). Very aware of these challenges, we do not start this project with bureaucrats in mind. But we are also convinced of the substantive interest such an experiment would have. Therefore we will remain open to the possibility of coming back to this topic, should the opportunity arise. 
+
+\subsection{Legislator contact experiments}  \label{sec: contact experiments}
+
+Randomized contact of legislators in American politics research remains relatively rare. \autoref{tab:audit_experiments} below summarizes previous studies. Our design resembles a mix of the experiments conducted by \citet{butler2011politicians} and \citet{kalla2016campaign}. Our factorial design will come close to \citet{butler2011politicians}'s 2x3 design (and may use their contact list for state legislatures). We also plan to emulate \citet{kalla2016campaign}'s use of a third party organization to contact legislators, as well as their more nuanced outcome measure: both rate of response to emails and the seniority of the person who has agreed to meet with the organization. The use of roll call votes as in \citet{bergan2009does} is likely only possible for an experiment that targets one bill in one Chamber. 
+
+To our knowledge, no similar audit experiment has attempted to contact bureaucrats. This is not surprising: contact is common for legislative offices -  part of a legislator's job (and incentives) is to listen to constituents and interest groups. Contact of bureaucrats is less common. Such outreach would therefore require a highly credible source and motive.\footnote{Bureaucrats likely would not respond to advocacy groups, but may be more amenable to meeting with research-oriented and/or institutional sources.} We are aware of these challenges and therefore focus on legislator contact. However, we are aware that policy adoption often flows through bureaucratic agencies and therefore posit that bureaucratic knowledge of research quality is also of substantive interest. This therefore remains an important avenue of inquiry.
 
 
 \begin{sidewaystable}[]
 \caption{Audit experiments conducted with U.S. policy-makers}
+\label{tab:audit_experiments} 
 \bigbreak
 \tiny
 \begin{tabular}{|l|l|l|l|l|l|l|l|l|}
 \hline
-Reference      & Federal/State                                                                                                                        & Treatment \# & Treatment                                                                                                           & Design                                                                                                                                                        & Outcome                                                                                                    & 3rd party?                                                                                                                                                                                                                                                  \\ \hline
- \citet{bergan2009does}        & \begin{tabular}[c]{@{}l@{}}House of Representatives of\\ New Hampshire\end{tabular}                                                  & 1            & \begin{tabular}[c]{@{}l@{}}Getting contacted \\ by activists\end{tabular}                                           & \begin{tabular}[c]{@{}l@{}}Matched pairs \\ (multimembers districts)\\ Randomization within party\\ and district stratas\end{tabular}                         & Roll Call votes                                                                                            & \begin{tabular}[c]{@{}l@{}}Yes: coalition of \\ public health-related groups\\  organizing a grassroots email \\ lobbying campaign by activists\end{tabular}                                                                                              
+Reference      
+& Federal/State                                                                                                                        & Arms 
+& Treatment                                                                                                           
+& Design                                                                                                                                                        & Outcome 
+& 3rd party?                                                                                                                                                                                                                                                  \\ \hline
+ \citet{bergan2009does}        
+& \begin{tabular}[c]{@{}l@{}}State \\ (New Hampshire) \end{tabular}                                                  & 1
+& \begin{tabular}[c]{@{}l@{}} Contacted \\ by activists \end{tabular}                                           & \begin{tabular}[c]{@{}l@{}}Matched pairs \\ (multimembers districts)\\ Randomization within party\\ and district stratas\end{tabular}                         
+& Roll Call votes                                                                                            
+& \begin{tabular}[c]{@{}l@{}}Yes: coalition of \\ public health-related groups\\  organizing a grassroots email \\ lobbying campaign by activists\end{tabular}                                                                                              
   \\ \hline
  \citet{butler2011politicians}       & \begin{tabular}[c]{@{}l@{}}4,859 state legislators\\ (44 states)\end{tabular}                                                        & 2x3          & \begin{tabular}[c]{@{}l@{}}Black or \\ white name and\\ party (D/R/blank)\\ of email sender\end{tabular}            & \begin{tabular}[c]{@{}l@{}}Block randomization\\ by state, chamber, \\ party, and whether\\ legislator is up for \\ reelection\end{tabular}                   & \begin{tabular}[c]{@{}l@{}}Rate of response\\ to emails\end{tabular}                                       & No                                                                                                                                                                                                                                                          \\ \hline
  \citet{kalla2016campaign}     & \begin{tabular}[c]{@{}l@{}}US Congress (191 offices)\\ These were the offices \\ that had not sponsored the \\ bill yet\end{tabular} & 1            & \begin{tabular}[c]{@{}l@{}}Reveal in email that\\ prospective attendees had\\ contributed to campaigns\end{tabular} & \begin{tabular}[c]{@{}l@{}}Blocks of 3 offices: closest\\ similarity on multiple \\ covariates\\ 1 treated, 2 control in each\\ of the 64 blocks\end{tabular} & \begin{tabular}[c]{@{}l@{}}Rate of response\\ to emails and\\ seniority of proposed\\ meeting\end{tabular} & \begin{tabular}[c]{@{}l@{}}Yes: liberal political organization \\ trying to set meetings between offices\\ and constituents who had previously \\ given to campaigns. \\ Goal of the meetings: rally support for \\ a bill banning a chemical.\end{tabular} 
@@ -195,7 +211,8 @@ Reference      & Federal/State                                                  
      \\ \hline
   \citet{butler2011can}     & \begin{tabular}[c]{@{}l@{}}New Mexico State House \\ 70 legislators \end{tabular} & 1          & \begin{tabular}[c]{@{}l@{}}Received district-specific \\survey results on \\constituents' opinions \\on a bill \end{tabular} & \begin{tabular}[c]{@{}l@{}}35 matched pairs \end{tabular} & \begin{tabular}[c]{@{}l@{}} Cosponsorship of bills \\ Roll-call votes \end{tabular} & \begin{tabular}[c]{@{}l@{}}Use of University Logo \\ And email from \\ own researchers' address\end{tabular} 
        \\ \hline
-  \citet{butler2012field}     & \begin{tabular}[c]{@{}l@{}}489 legislatives offices \\ 23 states \\ 1,036 letters \end{tabular} & 2x4        & \begin{tabular}[c]{@{}l@{}}Received letter \\ ethnicity of sender varied \\ 2 ethnicities \\  type of letter varied \\ 4 types (policy vs service, \\ level of knowledge) \end{tabular} & \begin{tabular}[c]{@{}l@{}}35 matched pairs \end{tabular} & \begin{tabular}[c]{@{}l@{}} Rate of response \\ Roll-call votes \end{tabular} & \begin{tabular}[c]{@{}l@{}}Yes: actual individuals \\ 200 students at BYU \\ Opened post office boxes \\ in their hometown \end{tabular} 
+  \citet{butler2012field}     & \begin{tabular}[c]{@{}l@{}}489 legislatives offices \\ 23 states \\ 1,036 letters \end{tabular} & 2x4        & \begin{tabular}[c]{@{}l@{}}Received letter \\ ethnicity of sender varied \\ 2 ethnicities \\  type of letter varied \\ 4 types (policy vs service, \\ level of knowledge) \end{tabular} & \begin{tabular}[c]{@{}l@{}}35 matched pairs \end{tabular} & \begin{tabular}[c]{@{}l@{}} Rate of response \\ Roll-call votes \end{tabular} & \begin{tabular}[c]{@{}l@{}}Yes: actual individuals \\ 200 students at BYU \\ Opened post office boxes \\ in their hometown \end{tabular} \\
+\hline
 \end{tabular}
 \end{sidewaystable}
 
